# generativeai-questions-and-answers-app

./: .gitignore  Dockerfile  Makefile  README.md  et --hard HEAD~2  format.sh  install_aws_cli.sh  install_graph_viz.sh  install_poetry.sh  install_terraform.sh  lint.sh  pyproject.toml  test.sh
.aws/: task-definition-actions.json  task-definition.json
.devcontainer/: devcontainer.json
.github/workflows/: aws.yml  cd.yml  ci.yml  terraform.yml
docs/: api.md  aws_secret_keys.md  bedrock_tutorial.md  github_actions_secret_keys.md  iam_user_policies.md  microservice.md  network.md  s3.md  terraform.md  vector_store.md
documents/cnu/: edital-cpnu-bloco-6-10jan2024.txt  edital-cpnu-bloco-8-10jan2024.txt
lambda/: Dockerfile  create_vector_store.py  main.py  utils.py
lambda/docker/: Dockerfile
lambda/functions/: create_vector_store.py  main.py
lambda/src/: create_vector_store.py  main.py  utils.py
lambda_functions/docker/: Dockerfile
lambda_functions/src/: main.py
scripts/: deploy.sh  deploy_lambda.sh  docker_run.sh  install_aws_cli.sh  install_graph_viz.sh  install_poetry.sh  install_terraform.sh  package_lambda.sh  package_lambda_layer.sh  set_secrets.sh  terraform_fmt.sh  terraform_init.sh  terraform_migrate.sh  upload_secrets.sh  upload_state.sh
src/app/: app.py  main.py
src/cli/: bedrock_cli.py  cli.py  global_variables.py  hf_cli.py  (+3 more)
terraform/: .terraform.lock.hcl  bedrock.tf  ecr.tf  ecs.md  ecs.tf  load_balancer.tf  main.tf  opensearchserveless.md  outputs.tf  provider.tf  s3.tf  variables.tf  vpc.tf
tests/: test.py  test_cli_utils.py  test_main.py  test_utils.py
tutorials/: aws_secret_keys.md  bedrock_tutorial.md  iam_user.md  iam_user_policies.md  terraform.md
(+58 files in other folders)
