[tool.poetry]
name = "generativeai-questions-and-answers-app-with-bedrock-langchain-and-fastapi"
version = "0.1.0"
description = "GenerativeAI Question and Answer application"
authors = ["Matheus Ribeiro <94936606+mathewsrc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
awscli = "^1.32.14"
botocore = "^1.34.14"
pytest = "^7.4.4"
ruff = "^0.1.11"
click = "^8.1.7"
boto3 = "^1.34.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
