[tool.poetry]
name = "generativeai-questions-and-answers-app-with-bedrock-langchain-and-fastapi"
version = "0.1.0"
description = "GenerativeAI Question and Answer application"
authors = ["Matheus Ribeiro <94936606+mathewsrc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
awscli = "^1.32.14"
botocore = "^1.34.14"
pytest = "^7.4.4"
ruff = "^0.1.11"
click = "^8.1.7"
boto3 = "^1.34.14"
pypdf = "^3.17.4"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pytest-cov = "^4.1.0"
joblib = "^1.3.2"
pydantic = "^2.5.3"
langchain-community = "^0.0.11"
lancedb = "^0.4.4"
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.1"
s3transfer = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 2. Avoid enforcing line-length violations (`E501`)
#ignore = ["E501"]
extend-safe-fixes = ["F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"
